[gd_scene load_steps=9 format=1]

[ext_resource path="res://other/tiles.xml" type="TileSet" id=1]
[ext_resource path="res://scenes/camera_rig.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/HUD.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/enemy_spawn.gd" type="Script" id=4]
[ext_resource path="res://scenes/prison_door.tscn" type="PackedScene" id=5]
[ext_resource path="res://scripts/arena_spawn.gd" type="Script" id=6]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 10, 180 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 10, 128 )

[node name="fortress_3" type="Node2D" groups=[
"boss",
]]

[node name="player_spawn" type="Position2D" parent="."]

transform/pos = Vector2( 103.648, 97.0323 )

[node name="TileMap" type="TileMap" parent="."]

mode = 0
tile_set = ExtResource( 1 )
cell/size = Vector2( 16, 16 )
cell/quadrant_size = 16
cell/custom_transform = Matrix32( 1, 0, 0, 1, 0, 0 )
cell/half_offset = 2
cell/tile_origin = 0
cell/y_sort = false
collision/use_kinematic = false
collision/friction = 1.0
collision/bounce = 0.0
collision/layers = 1
collision/mask = 1
occluder/light_mask = 1
tile_data = IntArray( 65535, 4, 2, 4, 3, 4, 4, 122, 5, 122, 6, 122, 7, 122, 8, 122, 9, 122, 10, 122, 11, 122, 12, 122, 13, 122, 14, 122, 15, 122, 16, 122, 17, 122, 18, 122, 19, 122, 20, 122, 21, 122, 22, 122, 23, 4, 24, 4, 25, 4, 26, 4, 27, 4, 28, 127, 29, 127, 30, 127, 31, 127, 32, 127, 33, 127, 34, 127, 131071, 4, 65536, 4, 65537, 4, 65538, 4, 65539, 4, 65540, 122, 65541, 122, 65542, 122, 65543, 122, 65544, 122, 65545, 122, 65546, 122, 65547, 122, 65548, 122, 65549, 122, 65550, 122, 65551, 122, 65552, 122, 65553, 122, 65554, 122, 65555, 122, 65556, 122, 65557, 122, 65558, 122, 65559, 4, 65560, 4, 65561, 4, 65562, 4, 65563, 4, 65564, 126, 65565, 126, 65566, 126, 65567, 126, 65568, 126, 65569, 126, 65570, 126, 196607, 4, 131072, 4, 131073, 4, 131074, 4, 131075, 4, 131076, 127, 131077, 126, 131078, 126, 131079, 126, 131080, 127, 131081, 126, 131082, 126, 131083, 126, 131084, 126, 131085, 127, 131086, 126, 131087, 126, 131088, 126, 131089, 127, 131090, 126, 131091, 126, 131092, 126, 131093, 126, 131094, 127, 131095, 4, 131096, 4, 131097, 4, 131098, 4, 131099, 4, 131100, 126, 131101, 126, 131102, 126, 131103, 126, 131104, 126, 131105, 126, 131106, 126, 262143, 4, 196608, 4, 196609, 4, 196610, 4, 196611, 4, 196612, 127, 196613, 126, 196614, 126, 196615, 126, 196616, 127, 196617, 126, 196618, 126, 196619, 126, 196620, 126, 196621, 127, 196622, 126, 196623, 126, 196624, 126, 196625, 127, 196626, 126, 196627, 126, 196628, 104, 196629, 126, 196630, 127, 196631, 4, 196632, 4, 196633, 4, 196634, 4, 196635, 4, 196636, 126, 196637, 126, 196638, 126, 196639, 126, 196640, 126, 196641, 126, 196642, 126, 327679, 4, 262144, 4, 262145, 4, 262146, 4, 262147, 4, 262148, 127, 262149, 126, 262150, 4, 262151, 126, 262152, 127, 262153, 126, 262154, 126, 262155, 4, 262156, 126, 262157, 127, 262158, 126, 262159, 126, 262160, 126, 262161, 127, 262162, 126, 262163, 126, 262164, 4, 262165, 126, 262166, 127, 262167, 4, 262168, 4, 262169, 4, 262170, 4, 262171, 4, 262172, 126, 262173, 126, 262174, 126, 262175, 126, 262176, 126, 262177, 126, 262178, 126, 393215, 4, 327680, 4, 327681, 4, 327682, 4, 327683, 4, 327684, 117, 327685, 117, 327686, 4, 327687, 117, 327688, 117, 327689, 117, 327690, 117, 327691, 4, 327692, 117, 327693, 117, 327694, 117, 327695, 117, 327696, 117, 327697, 117, 327698, 117, 327699, 117, 327700, 4, 327701, 117, 327702, 117, 327703, 4, 327704, 4, 327705, 4, 327706, 4, 327707, 4, 327708, 128, 327709, 128, 327710, 128, 327711, 128, 327712, 128, 327713, 128, 327714, 128, 458751, 4, 393216, 4, 393217, 4, 393218, 4, 393219, 21, 393220, 13, 393221, 13, 393222, 13, 393223, 13, 393224, 13, 393225, 13, 393226, 13, 393227, 13, 393228, 13, 393229, 13, 393230, 13, 393231, 13, 393232, 13, 393233, 13, 393234, 13, 393235, 13, 393236, 13, 393237, 13, 393238, 13, 393239, 22, 393240, 4, 393241, 4, 393242, 4, 393243, 4, 393244, 126, 393245, 126, 393246, 126, 393247, 126, 393248, 126, 393249, 126, 393250, 126, 524287, 4, 458752, 4, 458753, 4, 458754, 21, 458755, 13, 458756, 13, 458757, 13, 458758, 13, 458759, 13, 458760, 13, 458761, 13, 458762, 13, 458763, 13, 458764, 13, 458765, 13, 458766, 13, 458767, 13, 458768, 13, 458769, 13, 458770, 13, 458771, 13, 458772, 13, 458773, 13, 458774, 13, 458775, 13, 458776, 22, 458777, 4, 458778, 4, 458779, 4, 458780, 126, 458781, 126, 458782, 126, 458783, 126, 458784, 126, 458785, 126, 458786, 126, 589823, 4, 524288, 4, 524289, 21, 524290, 13, 524291, 13, 524292, 13, 524293, 13, 524294, 13, 524295, 13, 524296, 13, 524297, 13, 524298, 13, 524299, 13, 524300, 13, 524301, 13, 524302, 13, 524303, 13, 524304, 13, 524305, 13, 524306, 13, 524307, 13, 524308, 13, 524309, 13, 524310, 13, 524311, 13, 524312, 13, 524313, 22, 524314, 4, 524315, 4, 524316, 126, 524317, 126, 524318, 126, 524319, 126, 524320, 126, 524321, 126, 524322, 126, 655359, 4, 589824, 21, 589825, 13, 589826, 13, 589827, 13, 589828, 13, 589829, 13, 589830, 13, 589831, 13, 589832, 13, 589833, 13, 589834, 13, 589835, 13, 589836, 13, 589837, 13, 589838, 13, 589839, 13, 589840, 13, 589841, 13, 589842, 13, 589843, 13, 589844, 13, 589845, 13, 589846, 13, 589847, 13, 589848, 13, 589849, 13, 589850, 22, 589851, 4, 589852, 126, 589853, 126, 589854, 126, 589855, 126, 589856, 126, 589857, 126, 589858, 126, 720895, 4, 655360, 41, 655361, 41, 655362, 41, 655363, 41, 655364, 41, 655365, 41, 655366, 41, 655367, 41, 655368, 41, 655369, 41, 655370, 41, 655371, 41, 655372, 41, 655373, 41, 655374, 41, 655375, 41, 655376, 41, 655377, 41, 655378, 41, 655379, 41, 655380, 41, 655381, 41, 655382, 41, 655383, 41, 655384, 41, 655385, 41, 655386, 41, 655387, 22, 655388, 117, 655389, 117, 655390, 117, 655391, 117, 655392, 117, 655393, 117, 655394, 117, 786431, 4, 720896, 4, 720897, 4, 720898, 4, 720899, 4, 720900, 4, 720901, 4, 720902, 4, 720903, 4, 720904, 4, 720905, 4, 720906, 4, 720907, 4, 720908, 4, 720909, 4, 720910, 4, 720911, 4, 720912, 4, 720913, 4, 720914, 4, 720915, 4, 720916, 4, 720917, 4, 720918, 4, 720919, 4, 720920, 4, 720921, 4, 720922, 4, 720923, 4, 720924, 4, 720925, 4, 720926, 4, 720927, 4, 720928, 4, 720929, 4, 720930, 4 )

[node name="camera_rig" parent="." instance=ExtResource( 2 )]

[node name="HUD" parent="." instance=ExtResource( 3 )]

[node name="enemy_spawn" type="Area2D" parent="."]

transform/pos = Vector2( 104.383, 59.5426 )
input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
script/script = ExtResource( 4 )
guards = false
ninjas = false
hounds = false
big_dudes = false
rc_car = false
red_guards = false
skeletons = false
fat_ninjas = false
brawlers = false
archers = false
super_ninjas = false
boss_bots = true
deaths = false
cyborgs = false
vampires = false
green_whigs = false
duelists = false
big_whigs = false
waltzers = false
red_skeletons = false
amount = 1
has_door = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemy_spawn"]

shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="Timer" type="Timer" parent="enemy_spawn"]

process_mode = 1
wait_time = 0.1
one_shot = false
autostart = false

[node name="spawn_point1" type="Position2D" parent="enemy_spawn"]

transform/pos = Vector2( 203.22, 64.2822 )

[node name="spawn_point2" type="Position2D" parent="enemy_spawn"]

transform/pos = Vector2( 179.306, 69.4278 )

[node name="door" parent="enemy_spawn" instance=ExtResource( 5 )]

transform/pos = Vector2( 223.617, 20.4574 )
map_index = 23

[node name="arena_spawn" type="Node2D" parent="."]

script/script = ExtResource( 6 )
type = 0
has_door = false
number_to_spawn = 20

[node name="spawnpoint_1" type="Position2D" parent="arena_spawn"]

transform/pos = Vector2( 101.904, 95.1134 )

[node name="spawnpoint_2" type="Position2D" parent="arena_spawn"]

transform/pos = Vector2( 183.526, 96.8197 )

[node name="Timer" type="Timer" parent="arena_spawn"]

process_mode = 1
wait_time = 3.0
one_shot = false
autostart = false

[node name="Area2D" type="Area2D" parent="arena_spawn"]

transform/pos = Vector2( 101.442, 113.939 )
input/pickable = true
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="arena_spawn/Area2D"]

shape = SubResource( 2 )
trigger = true
_update_shape_index = 0


